Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%   Packages
+\documentclass[12pt]{article}
 \input{Essential/Packages.tex}
 \begin{document}
 
