--- a/Essential/Title.tex
+++ b/Essential/Title.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%   Skapar variabler, ändra dessa!
+%%%   Skapar variabler, ändra dessa!
 
 % Titel
 \def\thetitle{En Bra Titel}
@@ -25,7 +25,7 @@ Namn (abcdef-7@student.ltu.se)
 \def\theinstitution{Institutionen för teknikvetenskap och matematik}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%   Detta genererar titelsidan
+%%%   Detta genererar titelsidan!
 
 \begin{titlepage}
 	\centering
