--- a/Sections/Beteckningar.tex
+++ b/Sections/Beteckningar.tex
@@ -1,12 +1,12 @@
 \begin{raggedleft}
- \begin{tabular}{ c  l  c } 
- \textbf{Symbol} & \textbf{Beskrivning} & \textbf{Enhet} \\ [0.5ex] 
+ \begin{tabular}{ c  l  c }
+ \textbf{Symbol} & \textbf{Beskrivning} & \textbf{Enhet} \\ [0.5ex]
  \hline
- $E$ & Energi & $J$ \\ 
+ $E$ & Energi & \si{J} \\
  \hline
-   $m$ & Massa & $kg$ \\
+   $m$ & Massa & \si{kg} \\
  \hline
-  $c$ & Ljusets hastighet & $m/s$ \\
+  $c$ & Ljusets hastighet & \si{m/s} \\
  \hline
 \end{tabular}
 \end{raggedleft}
