--- a/Sections/Beteckningar.tex
+++ b/Sections/Beteckningar.tex
@@ -1,12 +1,12 @@
-\begin{raggedleft}
- \begin{tabular}{ c  l  c }
- \textbf{Symbol} & \textbf{Beskrivning} & \textbf{Enhet} \\ [0.5ex]
- \hline
- $E$ & Energi & \si{J} \\
- \hline
-   $m$ & Massa & \si{kg} \\
- \hline
-  $c$ & Ljusets hastighet & \si{m/s} \\
- \hline
+\vspace{-5mm}
+\begin{table}[H]
+\begin{tabular}{ l l l }
+\toprule
+\textbf{Symbol} & \textbf{Benämning} & \textbf{Enhet} \\
+\midrule
+    $E$ & Energi & \si{J} \\
+    $m$ & Massa & \si{kg} \\
+    $c$ & Ljusets hastighet & \si{m/s} \\
+\bottomrule
 \end{tabular}
-\end{raggedleft}
+\end{table}
