--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,14 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%   Packages
+%-----------------------------------------------
+%%                  Packages
+%-----------------------------------------------
 \documentclass[12pt]{article}
 \input{Essential/Packages.tex}
 %   Namnge bilagor
-\edef\bilaganamn{{"Intressant data","namn 2 osv",""}}
+\edef\bilaganamn{{"namn 1","namn 2",""}}
 
-%%%   Title
+%-----------------------------------------------
+%%                   Title
+%-----------------------------------------------
 \begin{document}
 \newgeometry{top=3cm, hmargin=0cm, bottom=1.5cm}
 \input{Essential/Title.tex}
@@ -13,16 +16,16 @@
 \pagenumbering{roman}
 \setcounter{page}{2}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%   Sections
+%-----------------------------------------------
+%                  Sections
+%-----------------------------------------------
 % Radera filer i "Sections/" som ej behövs. 
 % Då försvinner de automatiskt ur dokumentet.
-% Vid behov, ändra titlar/filer osv nedanför.
-
-\IfFileExists{Sections/Sammanfattning.tex}{
-\section*{Sammanfattning}
-\input{Sections/Sammanfattning.tex}
+% Vid behov, ändra rubrik/filer osv nedanför.
+%-----------------------------------------------
+\IfFileExists{Sections/Sammanfattning.tex}{ % Kollar om fil existerar
+\section*{Sammanfattning}                   % Rubrik
+\input{Sections/Sammanfattning.tex}         % Lägger in .tex fil
 }{}
 
 \IfFileExists{Sections/Abstract.tex}{
@@ -32,12 +35,8 @@
 
 \newpage
 \tableofcontents
+\hypersetup{linkcolor=royalblue}
 \newpage
-
-% table of contents för figurer och tabeller
-%\listoffigures
-%\listoftables
-%\newpage
 
 \IfFileExists{Sections/Beteckningar.tex}{
 \section*{Beteckningar}
@@ -80,14 +79,15 @@
 %\newpage
 \printbibliography
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%   Bilagor
+%-----------------------------------------------
+%%                  Bilagor
+%-----------------------------------------------
 % Skapa nya filer i "Sections/Bilagor/"
-% som heter Bilaga_1, Bilaga_2, ... Så läggs de in automatiskt!
-% Funkar för .tex och .pdf.
+% som heter Bilaga_1.tex, Bilaga_2.tex, ... Så läggs de in automatiskt!
 % Namnge bilagor högst upp ^.
-\IfFileExists{Sections/Bilagor/Bilaga_1.tex}{\bilagaloop}
-{\IfFileExists{Sections/Bilagor/Bilaga_1.pdf}{\bilagaloop}{}}
+%-----------------------------------------------
+
+\IfFileExists{Sections/Bilagor/Bilaga_1.tex}{\bilagaloop}{}
 % Koden kollar ifall den första filen finns, annars körs den ej :)
 
 \end{document}
