--- a/Essential/Readme.tex
+++ b/Essential/Readme.tex
@@ -8,22 +8,13 @@
 
 %   Sections
 Skriv direkt i filerna "Sections/...tex".
-Radera de filer du inte vill ha. Så löser koden resten.
-% Filen main.tex skapar sections och lägger ihop allt. 
-% Vill du ändra rubriker eller lägga till andra filer så ändra i main.tex.
+% Vill du lägga till fler filer så ändra i main.tex.
 
 %   Lägg till bilagor
 Lägg in bilagor i "Sections/Bilagor/".
 Namnge dom $"Bilaga_1", "Bilaga_2",..$ så läggs dom automatiskt in i dokumentet.
 Detta funkar för .tex filer.
 % koden för \bilagaloop är skriven i "Essential/Packages.tex".
-
-%   Namnge bilagor
-Namnge bilagor höst upp i "Sections/Main.tex".
-Lägg in namn i \edef\bilaganamn{{"namn 1","namn 2",""}}. 
-% Första namnet ges till bilaga 1, nästa namn till bilaga 2,..
-% Det blir "Bilaga 1, namn 1",.. 
-% Lägg till så många som behövs.
 
 %   Referenser
 Lägg till referenser i "Essential/References.bib".
@@ -34,7 +25,7 @@ Vill du ha ny sida för varje section? Ta bort procent framför "\newpage" i "ma
 %%% SNABB COMPILE!, --> "Essential/Packages.tex". Bra för många bilder!
 %%% Ändra språk,    --> "Essential/Packages.tex".
 %%% Fler packages,  --> "Essential/Packages.tex". Nedanför %   Extra.
-%%% Mer plats på titelsida,--> "Essential/Titel.tex", rad 38 och 45/48.
+%%% Mer plats på titelsida,--> "Essential/Titel.tex", rad 40 och 46/49.
 
 %-----------------------------------------------
 %%                 Nice stuff
