Updates from Overleaf

--- a/Essential/Packages.tex
+++ b/Essential/Packages.tex
@@ -1,5 +1,5 @@
 %-----------------------------------------------
-%%          %%% Hugos Template 1.7 %%%
+%%              Hugos Template 1.13
 %-----------------------------------------------
 %%                  Settings
 %-----------------------------------------------
@@ -38,7 +38,7 @@
 \usepackage{pgffor}                     % Loop för bilagor.
 \usepackage{pdfpages}                   % Pdfs.
 \addto{\captionsswedish}{\renewcommand*%
-{\contentsname}{Innehållsförteckning}}  % Ändrar namn till Innehållsförteckning
+{\contentsname}{Innehållsförteckning}}  % Ändrar namn -> Innehållsförteckning
 
 \usepackage[colorlinks]{hyperref}                  % Hyperlänkar + färg
 \usepackage[nameinlink,noabbrev,swedish]{cleveref} % \cref{} & \Cref{}
@@ -53,7 +53,6 @@
 }
 
 \usepackage{matlab-prettifier}          % Matlab text!
-\usepackage[iso,swedish]{isodate}       % Iso datum
 \usepackage[per-mode=symbol]{siunitx}   % si. Skriva enheter/nummer.
 \sisetup{output-decimal-marker={,},%    % si. ("{,}" till "{.}" för engelska).
 range-phrase=--,range-units=single,exponent-product=\cdot}
