--- a/Sections/Beteckningar.tex
+++ b/Sections/Beteckningar.tex
@@ -1,7 +1,8 @@
 \section*{Beteckningar}
+%
 \vspace{-5mm}
 \begin{table}[H]
-\begin{tabular}{ l l l }
+\begin{tabular}{@{} l l l @{}}
 \toprule
 \textbf{Symbol} & \textbf{Benämning} & \textbf{Enhet} \\
 \midrule
