--- a/Sections/Diskussion_s.tex
+++ b/Sections/Diskussion_s.tex
@@ -1,2 +1,3 @@
-\section{Diskussion och slutsatser}
+\section{Diskussion och slutsatser} \label{s:diskussion_s}
+%
 Det här är diskussion och slutsatser.
