--- a/Sections/Metod.tex
+++ b/Sections/Metod.tex
@@ -1,2 +1,15 @@
-\section{Metod}
+\section{Metod} \label{s:metod}
+%
 Det här är metod.
+\subsection{Metodbeskrivning}
+\subsection{Experimentell uppställning}
+Hänvisning till \cref{fig:namn}.
+%
+\begin{figure} [H]
+    \centering 
+    \includegraphics[width=0.5\textheight]{experiment_uppstallning.png}
+    \caption{Beskrivande text.}
+    \label{fig:namn}
+\end{figure}
+%
+\subsection{Experimentell procedur}
