--- a/main.tex
+++ b/main.tex
@@ -30,18 +30,17 @@
 \newpage
 \pagenumbering{arabic}
 
-\newpage
 \input{Sections/Inledning.tex}
-%\newpage
+\newpage
 \input{Sections/Teori.tex}
-%\newpage
+\newpage
 \input{Sections/Metod.tex}
-%\newpage
+\newpage
 \input{Sections/Resultat.tex}
-%\newpage
+\newpage
 \input{Sections/Diskussion_s.tex}
 
-%\newpage
+\newpage
 \printbibliography
 
 %-----------------------------------------------
@@ -49,9 +48,8 @@
 %-----------------------------------------------
 % Skapa nya filer i "Sections/Bilagor/"
 % som heter Bilaga_1.tex, Bilaga_2.tex,..
-% Så läggs de in automatiskt!
+% Så läggs de in automatiskt! :)
 %-----------------------------------------------
 \IfFileExists{Sections/Bilagor/Bilaga_1.tex}{\bilagaloop}{}
-% Koden kollar ifall den första filen finns, annars körs den ej :)
 
 \end{document}
